# RLCpp

./: .gitignore  2jjalloc.cpp  2jjalloc.h  CMakeLists.txt  VAE_test.cpp  autoencoder.cpp  autoencoder.h  call_once_test.cpp  example_app.cpp  graph.cpp  main.cpp  storage.cpp
example/: CMakeLists.txt  communicator.cpp  communicator.h  gym_client.cpp
gym_server/: envs.py
include/: observation_normalizer.hpp  running_mean_std.hpp  spaces.hpp  storage.hpp
include/algorithm/: actorcritic.hpp  algorithm.hpp  proximal_policy_optimization.hpp
include/distributions/: bernoulli.hpp  categorical.hpp  distribution.hpp  normal.hpp
include/generators/: feed_forward_generator.hpp  generator.hpp  recurrent_generator.hpp
include/model/: mlp_base.hpp  model_utils.hpp  nn_base.hpp  output_layers.hpp  policy.hpp
src/: CMakeLists.txt  observation_normalizer.cpp  running_mean_std.cpp  storage.cpp
src/algorithm/: CMakeLists.txt  actorcritic.cpp  proximal_policy_optimization.cpp
src/distribution/: CMakeLists.txt  bernoulli.cpp  categorical.cpp  distribution.cpp  normal.cpp
src/generators/: CMakeLists.txt  feed_forward_generator.cpp  recurrent_generator.cpp
src/model/: CMakeLists.txt  mlp_base.cpp  model_utils.cpp  nn_base.cpp  output_layers.cpp  policy.cpp
